--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 *{padding:0; margin:0; box-sizing: border-box;}
 body{background: #356842;}
 
-.typeDiv{width: 100vw; display: flex; justify-content: center; align-items: center; height: 100vh; flex-direction: column}
+.typeDiv{width: 100vw; display: flex; justify-content: center; align-items: center; height: 100vh; flex-direction: column;}
 .heading{color:white;}
 #typeArea{height: 250px; width: 550px;}
 .TypingContent{font-size: 20px;}
